--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Syne"/>
-    <title>Links website</title>
+    <title>Main | klobyy.github.io</title>
     <style>
       body {
         background-image: url(https://images.unsplash.com/photo-1534796636912-3b95b3ab5986?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1742&q=80); /* The image used for background*/
@@ -68,7 +68,7 @@
       .w3-yellow,
       .w3-hover-purple:hover,
       .w3-text-black {
-        color: rgba(255, 204, 217) !important;
+        color: rgba(56, 217, 94) !important;
         background-color: rgba(255, 255, 179, 0.3) !important;
       }
     </style>
@@ -93,9 +93,9 @@
         </div>
 
         <div class="links-container">
-          <a href="https://www.roblox.com/users/1727821752" class="w3-button w3-hover-pink w3-large w3-round-xlarge w3-yellow link" target="_blank">Roblox Account (RemakingReality)</a>
-          <a href="https://www.roblox.com/users/1829034891" class="w3-button w3-hover-pink w3-large w3-round-xlarge w3-yellow link" target="_blank">Roblox Account (STOPEATCAK)</a>
-          <a href="https://www.roblox.com/games/5258652570" class="w3-button w3-hover-pink w3-large w3-round-xlarge w3-yellow link" target="_blank">Roblox Game (Flood Project 275)</a>
+          <a href="https://www.roblox.com/users/1727821752" class="w3-button w3-hover-blue w3-large w3-round-xlarge w3-yellow link" target="_blank">Roblox Account (RemakingReality)</a>
+          <a href="https://www.roblox.com/users/1829034891" class="w3-button w3-hover-blue w3-large w3-round-xlarge w3-yellow link" target="_blank">Roblox Account (STOPEATCAK)</a>
+          <a href="https://www.roblox.com/games/5258652570" class="w3-button w3-hover-blue w3-large w3-round-xlarge w3-yellow link" target="_blank">Roblox Game (Flood Project 275)</a>
         </div>
       </div>
     </div>
