just some updates

--- a/index.html
+++ b/index.html
@@ -105,8 +105,7 @@
       <p class="w3-text-white">
         Hey, I'm Pwtxny! 
         I'm a Lua, HTML, and JavaScript Programmer.
-        I play games like Rocket League, Roblox, Minecraft, and some others.
-        My Hobbies are Coding, Playing Games, Donating, and some others.
+        I play Rocket League, Roblox, and Minecraft.
       </p>
     </div>
   </body>
