--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
       </div>
     </div>
     <div class="w3-content w3-padding-32 w3-center" style="padding-right: 10px; padding-left: 10px; max-width: 600px">
-      <h3 class="w3-text-white">Introduction to myself</h3>
-      <h5 class="w3-text-white">Last Updated: 09/07/2022</h5>
+      <h3 class="w3-text-white">Know About Me More</h3>
+      <h5 class="w3-text-white">Last Updated: 09/21/2022</h5>
       <p class="w3-text-white">
         Hey, I'm Pwtxny! 
         I'm a Lua, HTML, and JavaScript Programmer.
