update to my about me

--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
       <h5 class="w3-text-white">Last Updated: 09/21/2022</h5>
       <p class="w3-text-white">
         Hey, I'm Pwtxny! 
-        I'm a Lua, HTML, and JavaScript Programmer.
-        I play Rocket League, Roblox, and Minecraft.
+        I like programming, and I play RL, RBLX, and MC
+        also a proud python hater
       </p>
     </div>
   </body>
